Update project with the last fixes

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "flappy-poop",
+  "name": "flappy-poop2",
   "version": "1.0.0",
   "description": "My cool new game!",
   "scripts": {
