--- a/app/package.json
+++ b/app/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "proxy": "http://localhost:5000",
   "scripts": {
-    "start": "craco start",
+    "start": "craco --openssl-legacy-provider start",
     "build": "craco build",
     "test": "craco test",
     "eject": "craco eject",
@@ -32,7 +32,7 @@
     "react-dom": "^18.1.0",
     "react-redux": "^7.2.8",
     "react-router-dom": "^5.3.1",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.1",
     "react-use-measure": "^2.1.1",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.1",
