--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -7,7 +7,7 @@
       "dom.iterable",
       "esnext"
     ],
-    "types": ["vite/client", "vite-plugin-svgr/client"],
+    "types": ["vite/client", "vite-plugin-svgr/client", "node"],
     "allowJs": false,
     "skipLibCheck": false,
     "esModuleInterop": false,
@@ -25,6 +25,7 @@
   },
   "include": [
     "src",
+    "scripts",
     "vite.config.ts"
   ]
 }
